# synthesizer

./: .gitignore  .pylintrc  Makefile  README.md  demo_synth.py  devs.py  empty_track.ini  empty_track_909.ini  empty_track_dnb.ini  filemixer.py  keyboard_gui.py  main.py  mypy.ini  requirements.txt  rhythmbox.py  samplebox.py  setup.cfg  setup.py  soundplayer.py  synth.py  synth_demo.py  synth_gui.py  synth_performance.py  testfilters.py  track1.ini  track2.ini  track3.ini  trackmixer.py  waveplayer.py
example_programs/: delayed_play.py  filemixer.py  internetradio.py  keyboard_gui.py  play_large_file.py  remote_synth_client.py  soundplayer.py  stream_large_file.py  synth_demo.py  synth_performance.py  trackmixer.py
examples/: dynamic_sample.py  empty_track_dnb.ini  filemixer.py  internetradio.py  keyboard_gui.py  remote_synth_server.py  soundplayer.py  stream_large_file.py  synth_performance.py  trackmixer.py
examples/drumkit/: __main__.py  drumkit.py  gui.py
examples/jukebox/: box.py  musicfiledb.py
examples/keyboard_presets/: bell.ini  birdchirp.ini  electricorgan.ini  metallicbuzz.ini  tube1.ini  whales.ini  zoom.ini
jukebox/: __main__.py  backend.py  box.py  musicfiledb.py  streaming.py
keyboard_presets/: metallicbuzz.ini
pyminiaudio/: MANIFEST.in  README.md  build_decoders_module.py  build_ffi_module.py  decoders.c  miniaudio.c  miniaudio.py  miniaudio_decoders.py  mypy.ini  setup.cfg  setup.py
pyminiaudio/examples/: capture.py  capture.raw  demo1.py  demo2.py  demo3.py  demo4.py  devices.py  duplex.py  play.py  test.py  wire.py
pyminiaudio/examples/samples/: music.flac  music.m4a
pyminiaudio/miniaudio/: miniaudio.h
pyminiaudio/test/: test.py
pyminiaudio/test/samples/: music.flac
synth_gui_presets/: birdchirp.ini  electricorgan.ini  whales.ini  zoom.ini
synthesizer/: __init__.py  audioout.py  mixer.py  musicfileserver.py  params.py  playback.py  sample.py  streaming.py  synth.py  tools.py
synthesizer/tools/: mixer.py  playback.py  streaming.py
synthplayer/: __init__.py  oscillators.py  params.py  playback.py  sample.py  streaming.py  synth.py  synthserver.py
synthplayer/soundapi/: __init__.py  base.py  miniaudio.py  pyaudio.py  soundcard.py  sounddevice.py  winsound.py
synthserver/: client.py  server.py
trackmix_examples/: track3.ini
