[metadata]
name = synthplayer
version = attr: synthplayer.__version__
description = software sound synthesizer, audio streaming and conversion, and playback engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/synthesizer
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = sound, audio, playback, conversion, synthesizer, FM, PWM, oscillator
license = LGPL3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Natural Language :: Dutch
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Sound/Audio :: Mixers
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Multimedia :: Sound/Audio :: Sound Synthesis

[options]
zip_safe = True
include_package_data = False
packages = synthplayer
install_requires =
setup_requires =
    pytest-runner
test_require =
    pytest

[aliases]
test = pytest

[pycodestyle]
max-line-length = 140
ignore = E252, E226, E241
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build
