[metadata]
description = python bindings for the miniaudio library and its decoders (mp3, flac, ogg vorbis, wav)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/synthesizer/tree/master/pyminiaudio
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = sound, audio, playback, conversion, decoding
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Sound/Audio :: Players

[pycodestyle]
max-line-length = 120
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build,build_ffi_module.py
